# excavator

./: .gitignore  README.md  bench_io.py  domain_builder.py  domain_validator.py  extrusion.py  geom.py  geometry_reconcile.py  half_edge_mesh.py  main.py  models.py  partition_domain.py  plotter2d.py  plotter3d.py  polyline.py  pslg.py  pyproject.toml  shell_builder.py  triangle_backend.py
data/input/: take-home_350.json  take-home_360.json
domain/: builder.py  partition.py  validator.py
excavator/: app.py  cli.py  extrusion.py  logger.py  pipeline.py
excavator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
excavator/domain/: __init__.py  builder.py  partition.py
excavator/geometry/: pslg.py  reconcile.py  tolerance.py  utils.py
excavator/io/: export_slabs.py  load_benches.py
excavator/mesh/: half_edge_mesh.py
excavator/triangulation/: triangle_backend.py
excavator/vis/: plotter3d.py
geometry/: reconcile.py  utils.py
io_/: export_slabs.py
tests/unit_tests/: test_pslg_basic.py  test_pslg_intersections.py  test_pslg_loops.py  test_pslg_nesting.py  test_pslg_normalize_orientation.py  test_pslg_validate.py  test_pslg_vertex_on_segment.py  test_pslg_vertices_on_segments.py
vis/: plotter3d.py
