[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excavator"
authors = [{ name = "Eric Adam Garner", email = "eric.adam.garner@gmail.com" }]
description = "Computational excavation geometry and meshing engine"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
keywords = ["geometry", "meshing", "triangulation"]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "numpy",
    "scipy",
    "triangle",
    "trimesh",
    "networkx",
]

[project.optional-dependencies]
viz = [
    "vedo",
    "vtk",
    "matplotlib",
]

dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["."]
include = ["excavator*"]

[tool.setuptools.package-data]
excavator = ["*.json"]

[tool.setuptools.dynamic]
version = { file = "version.txt" }

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev = ["excavator[test]", "pre-commit", "build", "twine"]

[project.scripts]
excavator-demo = "excavator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = ["slow"]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[tool.ruff]
select = ["E", "F", "B"]
ignore = ["E501"]
line-length = 119

